--- a/FileUploadPOC.iOS/Info.plist
+++ b/FileUploadPOC.iOS/Info.plist
@@ -23,9 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>FileUploadPOC</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.companyname.FileUploadPOC</string>
+	<string>Sisystems</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
@@ -34,5 +32,7 @@
 	<string>FileUploadPOC</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.sisystems.Sisystems</string>
 </dict>
 </plist>
