--- a/FileUploadPOC.iOS/FileUploadPOC.iOS.csproj
+++ b/FileUploadPOC.iOS/FileUploadPOC.iOS.csproj
@@ -138,4 +138,7 @@
       <Name>FileUploadPOC</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\xamarinmonkeysbanner.png" />
+  </ItemGroup>
 </Project>
